--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -8,11 +8,11 @@ on:
   # pull_request:
   #   branches:
   #     - main
-  # push:
-  #   branches:
-  #     - main
-  # schedule:
-  #   - cron: '0 0 * * *' # Ejecutar diariamente a medianoche UTC
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: '0 0 * * *' # Ejecutar diariamente a medianoche UTC
   workflow_dispatch:
 
 jobs:
